--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,7 @@
 
 
     <div id="backButton">
-        <a href="../../COMP4537.html" role="button">Back</a>
+        <a href="../COMP4537.html" role="button">Back</a>
     </div>
 
 
